WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61163
Fix a problem that updating HTMLInputElement::value sets the cursor to a wrong position
https://bugs.webkit.org/show_bug.cgi?id=61163
Summary
Fix a problem that updating HTMLInputElement::value sets the cursor to a wron...
Naoki Takano
Reported
2011-05-19 18:30:55 PDT
Number input should handle cursor position intelligently when it formats the value.
Attachments
Patch
(2.58 KB, patch)
2011-05-19 18:34 PDT
,
Naoki Takano
tkent
: review+
Details
Formatted Diff
Diff
Change summary
(2.36 KB, patch)
2011-05-19 22:48 PDT
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Naoki Takano
Comment 1
2011-05-19 18:34:34 PDT
Created
attachment 94156
[details]
Patch
Naoki Takano
Comment 2
2011-05-19 18:35:32 PDT
Comment on
attachment 94156
[details]
Patch Please review.
Kent Tamura
Comment 3
2011-05-19 22:26:33 PDT
Comment on
attachment 94156
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=94156&action=review
> Source/WebCore/ChangeLog:5 > + Number input should handle cursor position intelligently when it formats the value.
The summary is not concrete. It should be something like "Fix a problem that updating HTMLInputElement::value sets the cursor to a wrong position"
Naoki Takano
Comment 4
2011-05-19 22:48:37 PDT
Created
attachment 94177
[details]
Change summary webkit-patch script doesn't work well suddenly in my environment... So manually I made the patch. I just change the summary. Please review and commit. Thanks,
WebKit Commit Bot
Comment 5
2011-05-19 23:37:14 PDT
Comment on
attachment 94177
[details]
Change summary Clearing flags on attachment: 94177 Committed
r86926
: <
http://trac.webkit.org/changeset/86926
>
WebKit Commit Bot
Comment 6
2011-05-19 23:37:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug